// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UrlInput /> with a non-string value passed in 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field mui-mi-input-field-has-error"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter URL"
  type="text"
  value="4593.3"
/>
`;

exports[`<UrlInput /> with a non-url value passed in 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field mui-mi-input-field-has-error"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter URL"
  type="text"
  value="www.goog"
/>
`;

exports[`<UrlInput /> with a required attribute 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field mui-mi-input-field-has-error"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter URL"
  required={true}
  type="text"
  value=""
/>
`;

exports[`<UrlInput /> with a value passed in 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter URL"
  type="text"
  value="https://www.gmail.com"
/>
`;

exports[`<UrlInput /> with autocomplete enabled 1`] = `
<input
  autoComplete="true"
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter URL"
  type="text"
  value=""
/>
`;

exports[`<UrlInput /> with no props 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter URL"
  type="text"
  value=""
/>
`;
